--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "nodemon": "^1.14.7"
   },
   "dependencies": {
+    "chai": "^4.1.2",
     "express": "^4.16.2",
     "html-template-tag": "^1.0.0",
+    "mocha": "^5.2.0",
     "morgan": "^1.9.0",
-    "node-time-ago": "^1.0.0"
+    "node-time-ago": "^1.0.0",
+    "pg": "^7.4.3"
   }
 }
