--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wizardnews",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "test": "DATABASE_URL=postgres://localhost/wnews nodemon ./node_modules/mocha/bin/mocha",
+    "start": "DATABASE_URL=postgres://localhost/wnews nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +14,23 @@
   },
   "dependencies": {
     "chai": "^4.1.2",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "html-template-tag": "^1.0.0",
     "mocha": "^5.2.0",
     "morgan": "^1.9.0",
     "node-time-ago": "^1.0.0",
     "pg": "^7.4.3"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kazniyaz/WizardNewsPt2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Kazniyaz/WizardNewsPt2/issues"
+  },
+  "homepage": "https://github.com/Kazniyaz/WizardNewsPt2#readme",
+  "description": ""
 }
