--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "DATABASE_URL=postgres://localhost/wnews nodemon ./node_modules/mocha/bin/mocha",
-    "start": "DATABASE_URL=postgres://localhost/wnews nodemon app.js"
+    "start": "DATABASE_URL=postgres://localhost/wnews node app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
   "dependencies": {
     "chai": "^4.1.2",
     "express": "^4.16.3",
+    "heroku-cli": "^7.0.9",
     "html-template-tag": "^1.0.0",
     "mocha": "^5.2.0",
     "morgan": "^1.9.0",
