--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "DATABASE_URL=postgres://localhost/wnews nodemon ./node_modules/mocha/bin/mocha",
-    "start": "DATABASE_URL=postgres://localhost/wnews nodemon app.js"
+    "test": "nodemon ./node_modules/mocha/bin/mocha",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
